--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -36,13 +36,13 @@ jobs:
         with:
           context: .
           push: true
-          tags: biggib01/testing:latest
+          tags: biggib01/project:latest
       -
         name: prepare the docker-compose run
         run: |
-               mkdir testing
-               cp docker-compose.yml testing/docker-compose.yml
-               cd testing
+               mkdir project
+               cp docker-compose.yml project/docker-compose.yml
+               cd project
                docker-compose -H ${{ secrets.HOST_SERVER}} down
                docker-compose -H ${{ secrets.HOST_SERVER}} pull
                docker-compose -H ${{ secrets.HOST_SERVER}} up -d
