--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: biggib01/project:latest
+          tags: biggib01/project
       -
         name: prepare the docker-compose run
         run: |
