--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,8 @@
-version: "3"
+version: '3'
 services:
-       login-app:
-           container_name: login-app
-           image: biggib01/testing
-           restart: always
-           build: .
-           ports:
-             - "8080:3000"
-           links:
-             - mongo
-       mongo:
-             container_name: mongo
-             image: mongo
-             volumes:
-               - ./data:/data/db
-             ports:
-               - '27018:27017'
+  app:
+    container_name: finaldeploy
+    restart: always
+    image:  biggib01/testing:latest
+    ports:
+      - "8081:3000"
